--- a/about.html
+++ b/about.html
@@ -4,8 +4,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Hirethru Consultancy</title>
+  <title>About Us - Hirethru Consultancy</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="css/style.css" rel="stylesheet" />
   <style>
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -23,21 +24,13 @@
 
     .hero {
       background: url('images/hero.jpg') no-repeat center center/cover;
-      height: 70vh;
+      height: 50vh;
       color: white;
       display: flex;
       align-items: center;
       justify-content: center;
       text-align: center;
       flex-direction: column;
-    }
-
-    .feature-box {
-      background-color: #e6f0ff;
-      border: 1px solid #b3d1ff;
-      padding: 20px;
-      margin-bottom: 20px;
-      border-radius: 10px;
     }
 
     footer {
@@ -47,11 +40,8 @@
       text-align: center;
     }
 
-    video {
-      border-radius: 10px;
-      margin-top: 20px;
-      max-width: 100%;
-      height: auto;
+    .content-section {
+      padding: 40px 0;
     }
   </style>
 </head>
@@ -64,10 +54,7 @@
         <img src="images/logo.png" alt="Hirethru Logo" style="height: 40px; margin-right: 10px;" />
         Hirethru
       </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
+      <div class="collapse navbar-collapse">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
           <li class="nav-item"><a class="nav-link" href="candidates.html">Candidate Zone</a></li>
@@ -81,35 +68,31 @@
   <!-- Hero Section -->
   <div class="hero">
     <div class="container">
-      <h1 class="display-5 fw-bold">Connecting IT Talent with Opportunity</h1>
-      <p class="lead">Your dream job or candidate is just a click away</p>
-      <video controls>
-        <source src="videos/intro.mp4" type="video/mp4" />
-        Your browser does not support the video tag.
-      </video>
+      <h1 class="display-4 fw-bold">About Hirethru Consultancy</h1>
+      <p class="lead">Connecting IT professionals with the best opportunities</p>
     </div>
   </div>
 
-  <!-- Feature Highlights -->
-  <div class="container my-5">
-    <div class="row text-center">
-      <div class="col-md-4">
-        <div class="feature-box">
-          <h4>High Demand Roles</h4>
-          <p>Explore opportunities in Cloud, DevOps, Data Engineering, Cybersecurity and more.</p>
-        </div>
+  <!-- About Us Content -->
+  <div class="container content-section">
+    <div class="row">
+      <div class="col-md-6">
+        <h2>Our Mission</h2>
+        <p>
+          At Hirethru Consultancy, our mission is to bridge the gap between talented IT professionals and the organizations looking to leverage their skills. We strive to provide personalized recruitment services that not only meet the needs of businesses but also offer growth opportunities for professionals.
+        </p>
       </div>
-      <div class="col-md-4">
-        <div class="feature-box">
-          <h4>Excellent Payscales</h4>
-          <p>We ensure our candidates get what they deserve, including above-industry pay standards.</p>
-        </div>
+      <div class="col-md-6">
+        <h2>Our Vision</h2>
+        <p>
+          We envision being a leading consultancy firm, known for its unwavering commitment to quality, innovation, and successful placements in the IT industry. Our goal is to create a platform where both candidates and recruiters thrive by connecting the right talent with the right job.
+        </p>
       </div>
-      <div class="col-md-4">
-        <div class="feature-box">
-          <h4>Corporate Benefits</h4>
-          <p>Health insurance, hybrid work, bonuses & rapid growth — top benefits from top companies.</p>
-        </div>
+    </div>
+    <div class="row mt-5">
+      <div class="col-md-12 text-center">
+        <h2>Our Core Values</h2>
+        <p>Integrity, professionalism, and commitment to excellence guide everything we do.</p>
       </div>
     </div>
   </div>
