--- a/recruiters.html
+++ b/recruiters.html
@@ -4,8 +4,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Hirethru Consultancy</title>
+  <title>Recruiter's Desk - Hirethru Consultancy</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="css/style.css" rel="stylesheet" />
   <style>
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -22,8 +23,8 @@
     }
 
     .hero {
-      background: url('images/hero.jpg') no-repeat center center/cover;
-      height: 70vh;
+      background: url('images/recruiter-hero.jpg') no-repeat center center/cover;
+      height: 50vh;
       color: white;
       display: flex;
       align-items: center;
@@ -32,11 +33,13 @@
       flex-direction: column;
     }
 
-    .feature-box {
-      background-color: #e6f0ff;
-      border: 1px solid #b3d1ff;
-      padding: 20px;
-      margin-bottom: 20px;
+    .content-section {
+      padding: 40px 0;
+    }
+
+    .recruiter-img {
+      width: 100%;
+      height: auto;
       border-radius: 10px;
     }
 
@@ -45,13 +48,6 @@
       color: white;
       padding: 20px 0;
       text-align: center;
-    }
-
-    video {
-      border-radius: 10px;
-      margin-top: 20px;
-      max-width: 100%;
-      height: auto;
     }
   </style>
 </head>
@@ -69,9 +65,9 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
+          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="candidates.html">Candidate Zone</a></li>
-          <li class="nav-item"><a class="nav-link" href="recruiters.html">Recruiter's Desk</a></li>
+          <li class="nav-item"><a class="nav-link active" href="recruiters.html">Recruiter's Desk</a></li>
           <li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a></li>
         </ul>
       </div>
@@ -81,36 +77,32 @@
   <!-- Hero Section -->
   <div class="hero">
     <div class="container">
-      <h1 class="display-5 fw-bold">Connecting IT Talent with Opportunity</h1>
-      <p class="lead">Your dream job or candidate is just a click away</p>
-      <video controls>
-        <source src="videos/intro.mp4" type="video/mp4" />
-        Your browser does not support the video tag.
-      </video>
+      <h1 class="display-5 fw-bold">Recruiter's Desk</h1>
+      <p class="lead">Partner with us to find the best IT talent for your organization.</p>
     </div>
   </div>
 
-  <!-- Feature Highlights -->
-  <div class="container my-5">
-    <div class="row text-center">
-      <div class="col-md-4">
-        <div class="feature-box">
-          <h4>High Demand Roles</h4>
-          <p>Explore opportunities in Cloud, DevOps, Data Engineering, Cybersecurity and more.</p>
-        </div>
+  <!-- Content Section -->
+  <div class="container content-section">
+    <div class="row align-items-center">
+      <div class="col-md-6">
+        <h2>Why Choose Hirethru?</h2>
+        <ul>
+          <li>Access to a pool of highly qualified IT professionals</li>
+          <li>Pre-screened candidates to save you time</li>
+          <li>Specialized in high-demand roles across Cloud, DevOps, Data Science, and more</li>
+          <li>Customizable recruitment plans tailored to your needs</li>
+          <li>Fast and efficient placement process</li>
+        </ul>
       </div>
-      <div class="col-md-4">
-        <div class="feature-box">
-          <h4>Excellent Payscales</h4>
-          <p>We ensure our candidates get what they deserve, including above-industry pay standards.</p>
-        </div>
+      <div class="col-md-6">
+        <img src="images/recruiter-team.jpg" alt="Recruiter Team" class="recruiter-img" />
       </div>
-      <div class="col-md-4">
-        <div class="feature-box">
-          <h4>Corporate Benefits</h4>
-          <p>Health insurance, hybrid work, bonuses & rapid growth — top benefits from top companies.</p>
-        </div>
-      </div>
+    </div>
+
+    <div class="text-center mt-5">
+      <h4>Looking for Top Talent?</h4>
+      <p>Get in touch with us to discuss your hiring needs at <strong>clients@hirethru.in</strong>.</p>
     </div>
   </div>
 
